feature: Atualizando docker file

--- a/DockerFile
+++ b/DockerFile
@@ -2,6 +2,7 @@ FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /app
 
 COPY *.csproj ./
+RUN dotnet nuget locals all --clear
 RUN dotnet restore
 
 COPY . .
