--- a/DockerFile
+++ b/DockerFile
@@ -6,7 +6,7 @@ RUN dotnet nuget locals all --clear
 RUN dotnet restore
 
 COPY . .
-RUN dotnet publish -c Release -o out
+RUN dotnet publish ./TuristeiRV.API.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS runtime
 WORKDIR /app
