--- a/DockerFile
+++ b/DockerFile
@@ -1,15 +1,19 @@
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build-env
-WORKDIR /App
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+WORKDIR /app
+EXPOSE 80
 
-# Copy everything
-COPY . ./
-# Restore as distinct layers
-RUN dotnet restore
-# Build and publish a release
-RUN dotnet publish -c Release -o out
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+WORKDIR /src
+COPY ["TuristeiRV.API/TuristeiRV.API.csproj", "TuristeiRV.API/"]
+RUN dotnet restore "TuristeiRV.API/TuristeiRV.API.csproj"
+COPY . .
+WORKDIR "/src/TuristeiRV.API"
+RUN dotnet build "TuristeiRV.API.csproj" -c Release -o /app/build
 
-# Build runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:7.0
-WORKDIR /App
-COPY --from=build-env /App/out .
+FROM build AS publish
+RUN dotnet publish "TuristeiRV.API.csproj" -c Release -o /app/publish
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "TuristeiRV.API.dll"]
