--- a/DockerFile
+++ b/DockerFile
@@ -11,7 +11,7 @@ WORKDIR "/src/TuristeiRV.API"
 RUN dotnet build "TuristeiRV.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "TuristeiRV.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "TuristeiRV.API.csproj" -c Release -o /app/out --verbosity detailed
 
 FROM base AS final
 WORKDIR /app
