--- a/DockerFile
+++ b/DockerFile
@@ -1,30 +1,30 @@
 # Etapa base do runtime, usada para executar a aplicação
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
-EXPOSE 80
+EXPOSE 8080
+EXPOSE 8081
 
 # Etapa de build para restaurar e compilar o projeto
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-
-# Limpar cache de pacotes NuGet para garantir que tudo será restaurado do zero
-RUN dotnet nuget locals all --clear
 
 # Copiar o arquivo de projeto e restaurar dependências
 COPY ["TuristeiRV.API/TuristeiRV.API.csproj", "TuristeiRV.API/"]
-RUN dotnet restore "TuristeiRV.API/TuristeiRV.API.csproj" --verbosity detailed
+RUN dotnet restore "./TuristeiRV.API/TuristeiRV.API.csproj"
 
-# Copiar o restante do código fonte e compilar
+# Copiar o restante do código e compilar
 COPY . .
 WORKDIR "/src/TuristeiRV.API"
-RUN dotnet build "TuristeiRV.API.csproj" -c Release -o /app/build --verbosity detailed
+RUN dotnet build "./TuristeiRV.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Etapa de publicação para gerar os artefatos finais
 FROM build AS publish
-RUN dotnet publish "TuristeiRV.API.csproj" -c Release -o /app/out --verbosity detailed
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./TuristeiRV.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # Etapa final que copia os artefatos da publicação e executa a aplicação
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/out .
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "TuristeiRV.API.dll"]
