--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "dockerfile"
-dockerfilePath = "./TuristeiRV.API/Dockerfile"
+dockerfilePath = "./Dockerfile"
 
 [deploy]
 startCommand = "dotnet TuristeiRV.API.dll"
