--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "dockerfile"
-dockerfilePath = "DockerFile"
+dockerfilePath = "./DockerFile"
 
 [deploy]
 startCommand = "dotnet TuristeiRV.API.dll"
