--- a/DockerFile
+++ b/DockerFile
@@ -25,8 +25,8 @@ RUN dotnet publish -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 FROM base AS final
 WORKDIR /app
 
-RUN mkdir -p /app/credentials
-RUN echo $GOOGLE_CREDENTIALS_BASE64 | base64 -d > /app/credentials/turisteirv.json
+# RUN mkdir -p /app/credentials
+# RUN echo $GOOGLE_CREDENTIALS_BASE64 | base64 -d > /app/credentials/turisteirv.json
 
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "TuristeiRV.API.dll"]
